# Birdland

./: .es2  .gitignore  Images  Install-From-GitHub.sh  Install-From-Tar.sh  Install.sh  MANIFEST.in  Makefile  README.md  ReadMe-GitHub.md  ReadMe-PyPi.md  ReadMe-Tar.md  ReadMe.txt  Start-From-Tar.sh  requirements.txt  setup.cfg
SpecFiles/: birdland.spec.hold  build-tables.spec  check-offsets.spec
src/: Install-From-PyInstaller.sh  Makefile  ReadMe-Nuitka.md  ReadMe-PyInstaller.md  ReadMe.txt  birdland-full.spec  birdland-partial.spec  birdland_bootstrap.py  src
src/Book-Lists/: 7th-string-list.txt  Local-All-sort.txt  Local-All.txt  chris-paradine.txt  iGigBook.txt  psrtutorial-list.txt  traditional.txt  www.jstreetjazz.com
src/Canonical/: .es2  Book-List.txt  CanonicalNames.txt  Corrections.A.txt  Corrections.B.txt  Example-Canonical2File.txt
src/Documentation/: .es2  Makefile  Parts.txt  birdland-create.md  birdland.css  birdland.md  birdland.md.bak  conf.py  conf.py-Created  contact.html  contact.php  download.html  index.rst  landing.html  robots.txt  screenshots.html  search.html  search.php  sitemap.txt
src/Documentation/_build/doctrees/: birdland.doctree  environment.pickle  index.doctree
src/Documentation/_build/html/: .buildinfo  birdland.html  index.html  objects.inv  search.html  searchindex.js
src/Index-Sources/: .es1 (Gershwin's conflicted copy 2022-03-13)  run-all.sh
src/Index-Sources/AdamSpiers/: .es1 (Gershwin's conflicted copy 2022-03-13)  .es2  Local-Book-Names.txt  Local-Exclusions.txt  Local2Canon.txt  Proto-Canonical2File.txt  Proto-Local2Canon.txt  Proto-Page-Offsets.txt  Sheet-Offsets.txt  do-adamspiers.py
src/Index-Sources/AdamSpiers/Raw-Index/: ColoBk.csv  GreatGigBook.csv  JazzLTD.csv  NewReal1.csv  NewReal2.csv  RealBk1-Bb.csv  RealBk2-Bb.csv  RealBk2.csv  RealBk3-Bb.csv  RealBk3.csv  Vocal Real Book.csv  rbblues.csv
src/Index-Sources/Buffalo/: .es2  Errors.txt  Local-Book-Names.txt  Local2Canon.txt  Local2Canon.txt.bak  Proto-Canonical2File.txt  Proto-Local2Canon.txt  Proto-Page-Offsets.txt  Sheet-Offsets.txt  Summary.txt  do-buffalo.py  extract-csv-from-html.py
src/Index-Sources/ExtractedIndex/: Local-Book-Names.txt  Local2Canon.txt  Local2Canon.txt.bak  Proto-Canonical2File.txt  Proto-Local2Canon.txt  Proto-Page-Offsets.txt  Proto-Sheet-Offsets.txt  Sheet-Offsets.txt  do-extractedindex.py  extract-index-from-pdf.py
src/Index-Sources/ExtractedIndex/Raw-Index/: extracted.csv
src/Index-Sources/JasonDonenfeld/: Local-Book-Names.txt  Local-Exclusions.txt  Local2Canon.txt  Proto-Canonical2File.txt  Proto-Local2Canon.txt  Proto-Page-Offsets.txt  Sheet-Offsets.txt  do-jasondonenfeld.py
src/Index-Sources/JasonDonenfeld/Raw-Index/: index.raw
src/Index-Sources/MikelNelson/: .es2  Hold  Local-Book-Names.txt  Local-Exclusions.txt  Local2Canon.txt.bak  PO.hold  Proto-Canonical2File.txt  Proto-Local2Canon.txt  Proto-Page-Offsets.txt  Proto-Sheet-Offsets.txt  Sheet-Offsets.txt  do-mikelnelson.py
src/Index-Sources/MikelNelson/Raw-Index/: Colorado.csv  JazzLTD.csv  KathyBook.csv  LatinRealBkC.csv  SJCBookC2018.csv  newrbk2C.csv  realbk2.csv  realbk3.csv  realbk3h.csv  standardsrbkC.csv
src/Index-Sources/Sher/: .es2  Local-Book-Names.txt  Local-Exclusions.txt  Local2Canon.txt  Local2Canon.txt.bak  Proto-Canonical2File.txt  Proto-Local2Canon.txt  Proto-Sheet-Offsets.txt  Sheet-Offsets.txt  do-sher.py
src/Index-Sources/Sher/Raw-Index/: sher.csv  sher.tsv
src/Index-Sources/Skrivarna/: Hold  Local-Book-Names.txt  Local-Exclusions.txt  Local2Canon.txt  Local2Canon.txt.bak  Proto-Canonical2File.txt  Proto-Local2Canon.txt  Proto-Page-Offsets.txt  Sheet-Offsets.txt  books-unique.txt  books.txt  do-skrivarna.py  get-links.py  get-links.sh  links.txt  raw-links.txt
src/Index-Sources/Skrivarna/Raw-Index/: 557_jazz_standards_a_d.pdfb  557_jazz_standards_e_i.pdfb  557_jazz_standards_j_q.pdfb  557_jazz_standards_r_y.pdfb  bluesrealbook_a_c.pdfb  bluesrealbook_d_k.pdfb  bluesrealbook_l_o.pdfb  bluesrealbook_p_s.pdfb  bluesrealbook_t_y.pdfb  (+114 more)
src/Index-Sources/StompBox/: .es2  Local-Book-Names.txt  Local-Exclusions.txt  Local2Canon.txt  Proto-Canonical2File.txt  Proto-Local2Canon.txt  Proto-Sheet-Offsets.txt  Sheet-Offsets.txt  do-stompbox.py
src/Index-Sources/User/: Local-Book-Names.txt  Local2Canon.txt  Proto-Canonical2File.txt  Proto-Local2Canon.txt  Proto-Sheet-Offsets.txt  Real Jazz Book - Hal Leonard.csv.hold  Sheet-Offsets.txt  Sheet-Offsets.txt.hold  do-user.py
src/birdland/: .es2  .rgignore  DevNotes.txt  ReadMe-Birdland.md  ReadMe-Setuptools.md  Remove-Birdland.sh  Title-corrections-from-index.txt  __init__.py  birdland.conf.proto  birdland.css  birdland.html  birdland.htmldoc  birdland.md  birdland.py  build-config-proto.py  build-pdf-from-image.py  build_tables.py  check_offsets.py  diff_index.py  fb_canon2file_mgmt.py  fb_config.py  fb_index_create.py  fb_index_diff.py  fb_index_mgmt.py  fb_index_pagelist.py  fb_layout.py  fb_local2canon_mgmt.py  fb_make_desktop.py  fb_menu_stats.py  fb_metadata.py  fb_pdf.py  fb_search.py  fb_setlist.py  fb_title_correction.py  fb_utils.py  fb_version.py  get-youtube-links.py  requirements.txt
src/birdland/Fullword-Match/: fullwordmodule.c  fullwordmodule.c.pre-2-may-2022-work  fullwordmodule.c.pre-name-refactor  run.sh  setup.py  test_fullword.py
src/birdland/Icons/: convert-icons.sh
(+35 files in other folders)
