# --------------------------------------------------------------------------------------
#   setup.cfg - Config file for Setuptools packaging

#   WRW 21 Mar 2022 - Had to put 
#       Package_Type_Setuptools.txt
#       ReadMe-Setuptools.md
#   in src/birdland. Setuptools couldn't deal with that here or in src.
#   Tried to move this up one level. Seemed to work but 
#       no .local/lib/python3.10/site-packages/birdland
#       but .local/lib/python3.10/site-packages/birdland_wrwetzel-1.0.10.dist-info is OK.
#   Some docs recommends the 'src' layout as used here:

#   |--- src
#   |     |--birdland
#   |           |-- birdland.py
#   |           |-- __init__.py
#   |           |-- fb_*.py
#   |--- setup.cfg
#   |--- MANIFEST.in
#
# --------------------------------------------------------------------------------------

[metadata]
name = birdland_wrwetzel
version = 1.0.10
author = Bill Wetzel
author_email = birdland@wrwetzel.com

description = Birdland Musician's Assistant - A multimedia music viewer and library manager for music books including fakebooks.

# long_description = file: src/birdland/birdland.md - Nope, must use README.md
long_description = file: README.md
long_description_content_type = text/markdown

url = https://birdland.wrwetzel.com
keywords = fakebook, music reader, music librarian
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Environment :: X11 Applications
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Topic :: Multimedia

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data = True

install_requires =
    click
    configobj
    Levenshtein
    mutagen
    mysqlclient
    pandas
    pillow                                     
    PyMuPDF
    PySimpleGUI
    pytesseract                                     
    tk
    unidecode
    youtube-search-python

[options.package_data]
    * = src/birdland/Icons/*, 
        src/birdland/fullword.cpython-310-x86_64-linux-gnu.so,
        src/birdland/birdland.conf.proto,
        src/birdland/ReadMe-Birdland.md,
        src/birdland/Remove-Birdland.sh,
        src/birdland/Package_Type_Setuptools.txt,
        src/birdland/ReadMe-Setuptools.md


# /// RESUME install Install-From-Setuptools.sh and src/birdland/birdland-setuptools.desktop
#       in share/birdland
#     share/birdland =                               Install-From-Setuptools.sh, src/birdland/birdland-setuptools.desktop

[options.data_files]
    share/birdland/Book-Lists =                    src/Book-Lists/*,
    share/birdland/Canonical =                     src/Canonical/*,
    share/birdland/Music-Index =                   src/Music-Index/*,
    share/birdland/YouTube-Index =                 src/YouTube-Index/*
    share/birdland/Index-Sources/AdamSpiers/Raw-Index =      src/Index-Sources/AdamSpiers/Raw-Index/*,
    share/birdland/Index-Sources/AdamSpiers =      src/Index-Sources/AdamSpiers/*,
#    share/birdland/Index-Sources/Buffalo =         src/Index-Sources/Buffalo/*,
    share/birdland/Index-Sources/Buffalo/Raw-Index =         src/Index-Sources/Buffalo/Raw-Index/*,
#    share/birdland/Index-Sources/ExtractedIndex =  src/Index-Sources/ExtractedIndex/*,
    share/birdland/Index-Sources/ExtractedIndex/Raw-Index =  src/Index-Sources/ExtractedIndex/Raw-Index/*,
#    share/birdland/Index-Sources/JasonDonenfeld =  src/Index-Sources/JasonDonenfeld/*,
    share/birdland/Index-Sources/JasonDonenfeld/Raw-Index =  src/Index-Sources/JasonDonenfeld/Raw-Index/*,
#    share/birdland/Index-Sources/MikelNelson =     src/Index-Sources/MikelNelson/*,
    share/birdland/Index-Sources/MikelNelson/Raw-Index  =     src/Index-Sources/MikelNelson/Raw-Index/*,
#    share/birdland/Index-Sources/Sher =            src/Index-Sources/Sher/*,
    share/birdland/Index-Sources/Sher/Raw-Index =            src/Index-Sources/Sher/Raw-Index/*,
#    share/birdland/Index-Sources/Skrivarna =       src/Index-Sources/Skrivarna/*,
    share/birdland/Index-Sources/Skrivarna/Raw-Index =       src/Index-Sources/Skrivarna/Raw-Index/*,
#    share/birdland/Index-Sources/StompBox =        src/Index-Sources/StompBox/*,
    share/birdland/Index-Sources/StompBox/Raw-Index =        src/Index-Sources/StompBox/Raw-Index/*,
#    share/birdland/Index-Sources/User =            src/Index-Sources/User/*,
    share/birdland/Index-Sources/User/Raw-Index =            src/Index-Sources/User/Raw-Index/*,

    share/birdland/Documentation/birdland.md =                 src/Documentation/birdland.md,
    share/birdland/Documentation/birdland.pdf =                 src/Documentation/birdland.pdf,
    share/birdland/Documentation/birdland-create.md =                 src/Documentation/birdland-create.md,
    share/birdland/Documentation/birdland-create.pdf =                 src/Documentation/birdland-create.pdf

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    birdland = birdland:start_birdland
    bl-build-tables = birdland:start_build_tables
    bl-check-offsets = birdland:start_check_offsets

